; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_trim_filter_module/extr_ngx_http_trim_filter_module.c_ngx_http_trim_create_loc_conf.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_trim_filter_module/extr_ngx_http_trim_filter_module.c_ngx_http_trim_create_loc_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_3__*)* @ngx_http_trim_create_loc_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_trim_create_loc_conf(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i8* @ngx_pcalloc(i32 %7, i32 1)
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %12, %11
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local i8* @ngx_pcalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
